--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.10.0
+  cloud_firestore: ^3.1.0
+  firebase_database: ^8.1.0
+  json_serializable: ^6.0.1
+  json_annotation: ^4.3.0
+  provider: ^6.0.1
+  hive_flutter: ^1.1.0
+  hive: ^2.0.4
+  hive_generator: ^1.1.1
+  uuid: ^3.0.5
+  qr_flutter: ^4.0.0
+  qr_code_scanner: ^0.6.1
+  image_picker: ^0.8.4+4
+  firebase_storage: ^10.1.0
+  flick_video_player: ^0.4.0-dev.4
+  file_picker: ^4.2.3
+  video_player: ^2.2.7
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +62,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,6 +79,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/blue_grey_placeholder.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
