--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,6 @@ dependencies:
   json_serializable: ^6.0.1
   json_annotation: ^4.3.0
   provider: ^6.0.1
-  hive_flutter: ^1.1.0
-  hive: ^2.0.4
-  hive_generator: ^1.1.1
   uuid: ^3.0.5
   qr_flutter: ^4.0.0
   qr_code_scanner: ^0.6.1
@@ -51,6 +48,7 @@ dependencies:
   flick_video_player: ^0.4.0-dev.4
   file_picker: ^4.2.3
   video_player: ^2.2.7
+  firebase_auth: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +79,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - lib/assets/blue_grey_placeholder.png
+    - lib/assets/we_chat_bg.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
