--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,14 @@ dependencies:
   file_picker: ^4.2.3
   video_player: ^2.2.7
   firebase_auth: ^3.2.0
+  firebase_messaging: ^11.2.3
+  firebase_performance: ^0.8.0+2
+  firebase_analytics: ^9.0.3
+  firebase_crashlytics: ^2.4.3
+  retrofit: ^3.0.0
+  dio: ^4.0.4
+  retrofit_generator: ^3.0.0+2
+  flutter_local_notifications: ^9.1.5
 
 dev_dependencies:
   flutter_test:
